# Pydantic_learn

./: .gitignore  01-pydantic-basemodel.ipynb  02-pydantic-TypeCoertion.ipynb  03-pydantic-extrafields.ipynb  04-validating-in-high-level.ipynb  05-frozen-model.ipynb  06-standardizing-data.ipynb  07-Enum-and-pydantic.ipynb  08-Fields-configuration-basic.ipynb  09-alias-generators.ipynb  10-income-and-outcome-aliases.ipynb  11-field-serialize.ipynb  12-pydantic-types.ipynb  README.md  pyproject.toml
